[package]
name = "webpixels"
version = "0.2.0"
authors = ["charlesrocket"]
edition = "2021"
categories = ["wasm"]
license = "Apache-2.0/MIT"
description = "Libmosh for WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
getrandom = { version = "~0.2", features = ["js"] }
pixelmosh = "1"
png = "~0.17"
wasm-bindgen = "~0.2"
console_error_panic_hook = { version = "~0.1", optional = true }
wee_alloc = { version = "~0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "~0.3"
