[package]
name = "webpixels"
version = "0.3.0"
authors = ["charlesrocket"]
edition = "2021"
categories = ["multimedia::images", "wasm"]
license = "Apache-2.0/MIT"
description = "Libmosh for WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }
pixelmosh = "2"
png = "0.17"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
