[package]
name = "webpixels"
version = "0.4.1"
authors = ["charlesrocket"]
repository = "https://github.com/charlesrocket/webpixels"
edition = "2021"
categories = ["multimedia::images", "wasm"]
keywords = ["glitch"]
license = "Apache-2.0 OR MIT"
description = "Libmosh for WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
pixelmosh = { version = "4.1", default-features = false }
png = "0.17"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
